<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layout_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/add_followup_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/add_followup_tvTicketNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="serif"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sub_title_size" />


            <View
                style="@style/view1_enquiryFormView"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/txt2_SideHeadingStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description" />

                    <TextView
                        style="@style/txt8_StarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/star" />
                </LinearLayout>

                <EditText
                    android:id="@+id/add_followup_edtDescription"
                    style="@style/edt1_enquiryFormEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6.5"
                    android:hint="@string/write_update_related_to_followup"
                    android:lines="7"
                    android:autofillHints="None"
                    android:inputType="text|textMultiLine" />
            </LinearLayout>

            <View
                style="@style/view1_enquiryFormView"
                android:layout_width="match_parent"
                android:layout_height="1dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/txt2_SideHeadingStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/status" />

                    <TextView
                        style="@style/txt8_StarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/star" />
                </LinearLayout>


                <EditText
                    android:id="@+id/add_followup_edtFollowupStatus"
                    style="@style/edt1_enquiryFormEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6.5"
                    android:focusable="false"
                    android:hint="@string/select_status"
                    android:autofillHints="None"
                    android:inputType="text"/>
            </LinearLayout>


            <View
                style="@style/view1_enquiryFormView"
                android:layout_width="match_parent"
                android:layout_height="1dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/txt2_SideHeadingStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/next_followup" />

                    <TextView
                        style="@style/txt8_StarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/star" />
                </LinearLayout>


                <EditText
                    android:id="@+id/add_followup_edtNextFollowupDate"
                    style="@style/edt1_enquiryFormEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6.5"
                    android:focusable="false"
                    android:hint="@string/select_next_followup_date"
                    android:autofillHints="None"
                    android:inputType="date"/>
            </LinearLayout>

            <View
                style="@style/view1_enquiryFormView"
                android:layout_width="match_parent"
                android:layout_height="1dp" />


            <LinearLayout
                android:id="@+id/add_followup_layoutUploadPDF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.5"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/txt2_SideHeadingStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/upload_pdf" />

                        <TextView
                            style="@style/txt8_StarStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/star" />
                    </LinearLayout>


                    <TextView
                        android:id="@+id/add_followup_tvSelectFile"
                        style="@style/txt4_enquiryFormTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.5"
                        android:padding="4dp"
                        android:text="@string/choose_file"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/add_followup_tvPdfOneSelected"
                        style="@style/txt4_enquiryFormTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:padding="4dp"
                        android:text="@string/file_selected"
                        android:textColor="@color/colorGreen"
                        android:textSize="14sp"
                        android:visibility="invisible" />
                </LinearLayout>

                <View
                    style="@style/view1_enquiryFormView"
                    android:layout_width="match_parent"
                    android:layout_height="1dp" />
            </LinearLayout>

            <Button
                android:id="@+id/add_followup_btnSubmit"
                style="@style/btn1_enquiryFormEditText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/submit" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>