<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/layout_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_password"
                style="@style/txt_heading"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingEnd="0dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_password"
                    tools:ignore="VectorDrawableCompat"
                    android:contentDescription="@string/icon_password" />

                <EditText
                    android:id="@+id/executive_change_password_edtOldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_old_password"
                    android:autofillHints="@string/enter_old_password"
                    android:inputType="textPassword"
                    style="@style/edt_style"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingEnd="0dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/icon_password"
                    tools:ignore="VectorDrawableCompat"
                    android:contentDescription="@string/icon_password" />

                <EditText
                    android:id="@+id/executive_change_password_edtNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_new_password"
                    android:inputType="textPassword"
                    android:autofillHints="@string/enter_new_password"
                    style="@style/edt_style"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingEnd="0dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/icon_password"
                    tools:ignore="VectorDrawableCompat"
                    android:contentDescription="@string/icon_password" />

                <EditText
                    android:id="@+id/executive_change_password_edtRetypeNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_new_password_again"
                    android:inputType="textPassword"
                    android:autofillHints="@string/enter_new_password_again"
                    style="@style/edt_style"/>
            </LinearLayout>

            <Button
                android:id="@+id/executive_change_password_btnUpdate"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:text="@string/update"
                style="@style/btn1_enquiryFormEditText"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>